secure-gate-core/tests/compile-fail/serializable_secret_misuse.stderr
error[E0277]: the trait bound `BadSecret: SerializableSecret` is not satisfied
  --> tests/compile-fail/serializable_secret_misuse.rs:11:35
   |
11 |     let _ = serde_json::to_string(&Dynamic::<BadSecret>::new(BadSecret(vec![])));
   |             --------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SerializableSecret` is not implemented for `BadSecret`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `Serialize` is implemented for `Dynamic<T>`
   = note: required for `Dynamic<BadSecret>` to implement `Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`

error[E0277]: the trait bound `[u8; 32]: SerializableSecret` is not satisfied
  --> tests/compile-fail/serializable_secret_misuse.rs:14:35
   |
14 |     let _ = serde_json::to_string(&Fixed::<[u8; 32]>::new([0; 32]));
   |             --------------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SerializableSecret` is not implemented for `[u8; 32]`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `Serialize` is implemented for `Fixed<T>`
   = note: required for `Fixed<[u8; 32]>` to implement `Serialize`
note: required by a bound in `serde_json::to_string`
  --> $CARGO/serde_json-$VERSION/src/ser.rs
   |
   | pub fn to_string<T>(value: &T) -> Result<String>
   |        --------- required by a bound in this function
   | where
   |     T: ?Sized + Serialize,
   |                 ^^^^^^^^^ required by this bound in `to_string`
